<resources>
    <string name="app_name">Gojuon</string>

    <string name="menu_home">Home</string>
    <string name="menu_kana">Kana</string>
    <string name="menu_game">Game</string>
    <string name="menu_settings">Settings</string>


    <string name="about">About</string>


    <string name="title_activity_setting">Settings</string>
    <string name="version">Version</string>
    <string name="seion">清音</string>
    <string name="dakuon">浊音</string>
    <string name="yoon">拗音</string>

</resources>