<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/outline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_kana"
            android:icon="@drawable/outline_translate_24"
            android:title="@string/menu_kana" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/outline_casino_24"
            android:title="@string/menu_game" />
    </group>

    <item android:title="@string/about">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/outline_settings_24"
                    android:title="@string/menu_settings" />
            </group>
        </menu>
    </item>

</menu>