<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.acgmiao.dev.gojuon.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_kana"
        android:name="com.acgmiao.dev.gojuon.ui.kana.KanaFragment"
        android:label="@string/menu_kana"
        tools:layout="@layout/fragment_kana" />

    <fragment
        android:id="@+id/nav_game"
        android:name="com.acgmiao.dev.gojuon.ui.game.GameFragment"
        android:label="@string/menu_game"
        tools:layout="@layout/fragment_game" />

    <activity
        android:id="@+id/nav_settings"
        android:name="com.acgmiao.dev.gojuon.SettingActivity"
        android:label="@string/about"
        tools:layout="@layout/activity_setting" />
</navigation>